# ai-learning-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
ai_learning_os/: __init__.py  agent.py  config.py  ingest.py  monitoring.py  retrieval.py  tools.py
data/: resources.json
evals/: ground_truth.json  judge.py  run_eval.py
notebooks/: 01-setup.ipynb  02-rag.ipynb  retrieval_eval.ipynb  test_agent.py
notebooks/tests/: conftest.py  judge.py  test_agent.py
scripts/: WATCHLATER.md  enrich_watchlater.py  import_watchlater.py
tests/: conftest.py  judge.py  test_agent.py
