[project]
name = "ai-learning-os"
version = "0.1.0"
description = "AI Learning Chief of Staff — ingests saved resources, builds a personal knowledge base, and generates personalized weekly study plans"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
